# TobiiGlassesPyController

./: CMakeLists.txt  README.md  connect.py  live_scene.py  live_scene2.py  live_scene_and_gaze.py  live_scene_and_gaze_nocalib.py  live_scene_and_gaze_nocalib2.py  package.xml  streaming.py
config/: example_params.yaml
launch/: bringup.launch
msg/: PixelLabeled.msg
scripts/: aruco_interface.py  helper_functions.py  img_display.py  kinect_interface.py  main.py  sandbox.py  test_video.py  tobii_glasses.py  tobii_glasses_interface.py  tobii_publisher_node.py
scripts/tobiiapi/: livestream_data_and_video.py  video_with_gaze.py
scripts/tobiiglassesctrl/: controller.py
